--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 JWT_SECRET=inisecret
+MONGOHOST = containers-us-west-124.railway.app
+MONGOPASSWORD = XzZJbUhAkaGvlJnu6R82
+MONGOPORT = 5588
+MONGOUSER = mongo
